fix btn wrap

--- a/scss/components/button.scss
+++ b/scss/components/button.scss
@@ -6,6 +6,7 @@
     font-weight: 600;
     text-decoration:none;
     text-align:center;
+    white-space: nowrap;
     box-sizing:border-box;
     outline-offset: 3px;
     color: $color-primary !important;
